# google-workspace

./: .gitignore  AGENTS.md  CODE_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  INGEST_CLI_GUIDE.md  README.md  RECONCILIATION_REPORT.md  batch_upload_to_sheets.py  clean_chung_tu_nhap.py  clean_chung_tu_xuat.py  clean_thong_tin_khach_hang.py  clean_tong_no.py  clean_xuat_nhap_ton.py  generate_new_customer_id.py  generate_product_info.py  ingest.py  package.json  pipeline.py  pipeline.toml  pipeline.toml.backup  project_description.md  pyproject.toml  upload_customer_ids_to_sheets.py
.claude/: settings.local.json
apps-script/: AGENTS.md
docs/: architecture-decisions.md  development-workflow.md  erp-export-module.md  erp-mapping.md  lineage-and-reconciliation.md  manifest-caching.md  pipeline-io.md  refactoring-roadmap.md
legacy/: README.md  clean_chung_tu_nhap.py  clean_chung_tu_xuat.py  clean_thong_tin_khach_hang.py  clean_tong_no.py  clean_xuat_nhap_ton.py  generate_new_customer_id.py  generate_product_info.py  ingest.py  pipeline.py.deprecated
python/: AGENTS.md  PIPELINE.md  clean_all_data.py  cleaning_configs.py  data_cleaner.py  data_cleaning_utils.py  ingest.py  main.py  pipeline.py  pyproject.toml
scripts/: analyze_ctxuat_structure.py  check_reconciliation_discrepancies.py  copy_formula_tab_to_all_periods.py  examine_tab_structure.py  find_qty_column.py  reconcile_export_tabs.py  reconcile_july2020.py  remove_uploaded_tabs.py  rename_spreadsheets.py
src/: AGENTS.md  __init__.py
tests/: test_clean_product_names.py  test_exporter.py  test_ingest.py  (+29 more)
(+67 files in other folders)
