[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "gspread>=6.2.1",
    "ipython>=9.8.0",
    "oauth2client>=4.1.3",
    "pandas",
    "tqdm>=4.67.1",
]
